--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
   "pyyaml==6.0.3",
   "requests==2.32.5",
   "rich==14.2.0",
+  "sc2reader==1.8.0",
   "sqlmodel==0.0.27",
   "ulid-py==1.1.0"
 ]
@@ -33,6 +34,7 @@ infra = [
   "docker==7.1.0",
   "psutil==7.1.3",
   "pyinstaller==6.16.0",
+  "tomli==2.4.0",
   "types-docker==7.1.0.20251009",
   "uvicorn==0.38.0",
   "watchfiles==1.1.1"
