Make system write s2gs files to disk during ingest

--- a/.env.model
+++ b/.env.model
@@ -9,6 +9,7 @@ SC2_DATA_MANAGER_DATABASE_PORT=5434
 SC2_DATA_MANAGER_DATABASE_USERNAME=sc2-data-manager-user
 SC2_DATA_MANAGER_DISK_MAXIMUM_HEALTHY_USAGE_PERCENTAGE=90.0
 SC2_DATA_MANAGER_EXTERNAL_SERVICES_REQUEST_TIMEOUT=15.0
+SC2_DATA_MANAGER_GAME_SUMMARY_FILES_DIRECTORY=~/01-temp-ingested-sc2-game-summaries
 SC2_DATA_MANAGER_GLOBAL_CONFIG_DIR=/etc/sc2_data_manager
 SC2_DATA_MANAGER_LOGGER_JSON=false
 SC2_DATA_MANAGER_LOGGER_LEVEL=debug
